<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">爱车问问</string>
	<string name="pull_to_refresh_release_label">下拉刷新&#8230;</string>
	<string name="pull_to_refresh_footer_release_label">松开以加载&#8230;</string>
	<string name="pull_to_refresh_footer_pull_label">上拉加载更多&#8230;</string>
	<string name="pull_to_refresh_pull_label">多</string>
	<string name="pull_to_refresh_footer_refreshing_label">正在加载&#8230;</string>
	<string name="pull_to_refresh_refreshing_label">正在刷新&#8230;</string>
	<string name="classify_label">分类服务</string>
	<string name="knowledge_label">车辆知识</string>
	<string name="welfare_label">福利中心</string>
	<string name="question_label">车辆问答</string>
	<string name="info_label">我的信息</string>
	<string name="emergency_label">在线帮助</string>
	<string name="serarch_btn_label">搜索</string>
	<string name="blank_text"></string>
	<string name="net_error_msg">网络发生异常</string>
	<string name="upload_photo">上传照片</string>
	<string name="no_data">暂无数据</string>
	<string name="loading_msg">正在加载&#8230;</string>
	<string name="photo_from_camera">拍照</string>
	<string name="cancle">取消</string>
	<string name="photo_from_album">从相册选择</string>
	<string name="load_done">已加载全部数据</string>
	<string name="info_load_fail">暂无数据</string>
	<string name="userpwd_label">用户密码</string>
	<string name="phonenum_label">手机号码</string>
	<string name="viplevel_label">会员等级</string>
	<string name="info_new_question">最新咨询</string>
	<string name="info_question_history">提问历史</string>
	<string name="info_my_appointment">我的预约</string>
	<string name="info_my_experts">我的专家</string>
	<string name="info_condition">车辆状况</string>
	<string name="info_condition_detail">车况详情</string>
	<string name="info_my_car">我的车辆</string>
	<string name="info_mycar_addstatus">添\n加\n车\n况</string>
	<string name="info_change_label">修改信息</string>
	<string name="info_username_label">用户名称</string>
	<string name="info_old_pwd_label">原始密码</string>
	<string name="info_new_pwd_label">新改密码</string>
	<string name="info_confirm_pwd_label">确认密码</string>
	<string name="info_mycar_label">我的车辆</string>
	<string name="info_save_change">保存修改</string>
	<string name="info_save">保存</string>
	<string name="info_login_label">登录</string>
	<string name="info_add_car">增加车辆</string>
	<string name="info_change_car">修改车辆</string>
	<string name="info_confirm_add">确认添加</string>
	<string name="info_carnumber_label">车牌号</string>
	<string name="info_brand_label">品牌</string>
	<string name="info_model_label">型号</string>
	<string name="info_submodel_label">子型号</string>
	<string name="info_cartype_label">车辆类型</string>
	<string name="info_mileage_label">维修里程数</string>
	<string name="info_yearcheckdate_label">年检日期</string>
	<string name="info_manufacturer_label">生产厂家</string>
	<string name="info_insurancedate_label">保险时间</string>
	<string name="info_insurancetype_label">保险种类</string>
	<string name="info_insurancenum_label">保险单号</string>
	<string name="info_insurancecompany_label">保险公司</string>
	<string name="info_change_success">信息保存成功</string>
	<string name="info_change_fail">信息保存失败</string>
	<string name="info_username_is_null">用户名不能为空！</string>
	<string name="info_oldpwd_is_null">原始密码不能为空！</string>
	<string name="info_newpwd_is_null">新改密码不能为空！</string>
	<string name="info_confirmpwd_is_null">确认密码不能为空！</string>
	<string name="info_confirmpwd_not_tally">确认密码与密码不符！</string>
	<string name="info_status_pdz">排\n队\n中</string>
	<string name="info_status_wjj">未\n解\n决</string>
	<string name="info_status_yjj">已\n解\n决</string>
	<string name="info_status_ygb">已\n关\n闭</string>
	<string name="info_jfdh">积分兑换</string>
	<string name="info_question_detial">问题详情</string>
	<string name="info_car_detial">车辆详情</string>
	<string name="info_detail">详情信息</string>
	<string name="reply_label">回复</string>
	<string name="reply_hint">请输入回复信息&#8230;</string>
	<string-array name="info_repair_labels">
	    <item>维修里程数</item>
	    <item>维修时间</item>
	    <item>维修原因</item>
	    <item>维修单位</item>
	    <item>维修项目</item>
	    <item>送修人</item>
	    <item>维修费用</item>
	    <item>维修情况</item>
	</string-array>
	<string-array name="info_insurance_labels">
	    <item>保险时间</item>
	    <item>保险种类</item>
	    <item>保险费用</item>
	    <item>保险单位</item>
	    <item>保险公司</item>
	</string-array>
	<string-array name="info_maintenance_labels">
	    <item>保养时间</item>
	    <item>保养人</item>
	    <item>保养里程数</item>
	    <item>保养项目</item>
	    <item>保养服务单位</item>
	    <item>保养费用</item>
	    <item>下次保养里程数</item>
	</string-array>
	<string-array name="info_yearcheck_labels">
	    <item>年检时间</item>
	    <item>送检人</item>
	    <item>本车应检日期</item>
	    <item>年检有效期</item>
	    <item>年检费用</item>
	</string-array>
	<string name="question_note">知名维修专家，实时车辆问题排查</string>
	<string name="question_find_experts">找专家</string>
	<string name="question_mend">故障速查</string>
	<string name="question_custmon">装饰改装</string>
	<string name="question_custmon1">问答搜索</string>
	<string name="question_insurance">保险直通</string>
	<string name="question_cosmetology">洗车美容</string>
	<string name="question_find_specialty">按专长找</string>
	<string name="question_find_brand">按品牌找</string>
	<string name="question_title">车辆问答</string>
	<string name="question_title1">专家提问</string>
	<string name="question_beauty">美  容</string>
	<string name="question_mount">装  潢</string>
	<string name="question_servicing">维  修</string>
	<string name="question_maintain">保  养</string>
	<string name="question_insure">投  保</string>
	<string name="question_payfor">理 赔</string>
	<string name="question_hint">请详细描写您的爱车所出现的车辆状态，以方便专家对您的爱车做出正确的评估···</string>
	<string name="question_submit">提交问题</string>
	<string name="question_up_photo">上传照片</string>
	<string name="question_commit">问题提交</string>
	<string name="question_correlation">相关问题</string>
	<string name="question_sava_success">问题保存成功</string>
	<string name="question_sava_fail">问题保存失败</string>
	<string name="question_sava_text">请输入问题</string>
	<string name="question_sava_position">请选择部件</string>
	<string name="question_select_position">选择部件</string>
	<string name="question_noimg">暂时没有图片</string>
	<string name="question_imgload_failed">图片加载失败</string>
	<string name="question_nomeg">暂无数据</string>
	<string name="emergency_bxlp">保险理赔</string>
	<string name="emergency_jtbj">交通报警</string>
	<string name="emergency_wzcx">违章查询</string>
	<string name="emergency_yjjy">一键救援</string>
	<string name="knowledge_search_hint">输入查询信息&#8230;</string>
	<string name="knowledge_related_question">相关问答</string>
	<string name="knowledge_related_knowledge">相关知识</string>
	<string name="iknowledge_examination">维修自查</string>
	<string name="knowledge_decoration">汽车装饰</string>
	<string name="knowledge_detail">维保详情</string>
	<string name="knowledge_insurance">保险知识</string>
	<string name="knowledge_experience">经验心得</string>
	<string name="classify_kjrk">快捷入口</string>
	<string name="classify_wxby">维修保养</string>
	<string name="classify_pjgz">配件改装</string>
	<string name="classify_nwzx">内外装饰</string>
	<string name="classify_djfw">代驾服务</string>
	<string name="classify_bxyh">保险优惠</string>
	<string name="classify_qcmr">汽车美容</string>
	<string name="classify_zfw">找服务</string>
	<string name="classify_zsj">找商家</string>
	<string name="info_wxtime_label">维修时间</string>
	<string name="info_reason_label">维修原因</string>
	<string name="info_company_label">维修单位</string>
	<string name="info_item_label">维修项目</string>
	<string name="info_repair_label">送修人</string>
	<string name="info_cost_label">维修费用</string>
	<string name="info_situation_label">维修情况</string>
	<string name="info_remarks_label">备注</string>
	<string name="info_add_condition">添加车况</string>
	<string name="info_change_condition">修改车况</string>
	<string name="info_bytime_label">保养时间</string>
	<string name="info_bypeople_label">保养人</string>
	<string name="info_bymileage_label">保养里程数</string>
	<string name="info_byitem_label">保养项目</string>
	<string name="info_byunit_label">保养服务单位</string>
	<string name="info_bycost_label">保养费用</string>
	<string name="info_nextbymileage_label">下次保养里程数</string>
	<string name="info_bxtime_label">保险时间</string>
	<string name="info_bxtype_label">保险种类</string>
	<string name="info_bxcost_label">保险费用</string>
	<string name="info_bxunit1_label">保险单位</string>
	<string name="info_bxcompany_label">保险公司</string>
	<string name="info_njtime_label">年检时间</string>
	<string name="info_njpeople_label">送检人</string>
	<string name="info_shouldtime_label">本车应年检时间</string>
	<string name="info_njefftime_label">年检有效期</string>
	<string name="info_njcost_label">年检费用</string>
	<string name="search_result">搜索结果</string>
	<string name="info_question_detail_prompt">专家是利用休息时间为您解答问题，如未及时回复请谅解。\n专家的回复仅为参考，具体车辆问题请前往修理厂。</string>
	<string name="info_question_detail_prompt_one">如专家已解决您的问题，请点击评论>></string>
	<string name="info_question_detail_prompt_three">感谢您的使用>></string>
	<string name="info_comments_detail">查看评论详情>></string>
	<string name="info_question_detail_nodata">暂无聊天记录</string>
	<string name="spinner_default_label">请选择</string>
	<string name="info_brand_not_selected">请选择品牌</string>
	<string name="info_model_not_selected">请选择型号</string>
	<string name="back">返回</string>
	<string name="location_label">定位中...</string>
	<string name="login_loginin">登    录</string>
	<string name="login_regist">注    册</string>
	<string name="login_rem">忘记密码？</string>
	<string name="login_find">请点击这里找回...</string>
	<string name="login_goregist">立即注册</string>
	<string name="login_registlogin">已注册请登录</string>
	<string name="login_loginsuccess">登录成功</string>
	<string name="login_loginfailure">登录失败</string>
	<string name="question_comment_expert">评论专家</string>
	<string name="login_registsuccess">注册成功</string>
	<string name="login_registfailure">注册失败</string>
	<string name="login_loginuserisnull">登录帐号不能为空</string>
	<string name="login_loginpasswordisnull">登录密码不能为空</string>
	<string name="question_comment_expert_title">总体评论</string>
	<string name="question_comment_expert_hint">请输入您的评论内容...</string>
	<string name="question_comment_expert_commit">提交评论</string>
	<string name="regist_phone">请输入手机号码！</string>
	<string name="login_fail2">登录频繁，请稍后再试！</string>
	<string name="comment_success">评论成功</string>
	<string name="comment_fail">评论失败</string>
	<string name="info_bxtime_nodata">请输入保险时间！</string>
	<string name="info_bytime_nodata">请输入保养时间！</string>
	<string name="info_wxtime_nodata">请输入维修时间！</string>
	<string name="info_njtime_nodata">请输入年检时间！</string>
	<string name="eme_sos_content_hint">直接描写您的爱车出现的问题...</string>
	<string name="eme_sos_camera_label">拍照</string>
	<string name="eme_sos_video_label">视频</string>
	<string name="eme_sos_record_label">语音</string>
	<string name="commit_question">提交问题</string>
	<string name="eme_sos_label">快速求助</string>
	<string name="comments_detial_label">评论详情</string>
	<string name="question_more_experts">更多专家</string>
	<string name="question_expert_detital">专家详情</string>
	<string name="question_expert_answered_search">问答搜索</string>
	<string name="eme_sos_content_nodata">请输入描述信息</string>
	<string name="send_success">发送成功</string>
	<string name="eme_recording">正在录音</string>
	<string name="eme_record_video_start">已经开始录制视频</string>
	<string name="time_beyond">时间超出</string>
	<string name="text_count_beyond">字数超出</string>
	<string name="exit_prompt">再按一次退出</string>
	<string name="no_baidumap">未安装百度地图</string>
	<string name="unable_to_locate">无法定位</string>
	<string name="timeout">请求超时，请稍后再试！</string>
	<string name="welfare_signup_title">点击签到领取%d个金币！可以换取免费服务哦！</string>
	<string name="login_loadmsg">登录中...</string>
	<string name="regist_loadmsg">注册中...</string>
	<string name="signup_fail">签到失败...</string>
	<string name="signup_load_msg">签到中...</string>
	<string name="crop__saving">正在保存…</string>
    <string name="crop__wait">请等待…</string>
    <string name="crop__pick_error">没有可用图片资源</string>
    <string name="crop__done">确定</string>
    <string name="crop__cancel" tools:ignore="ButtonCase">取消</string>
    <string name="jianjie">专家简介： \n</string>
</resources>