<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/full_bg">
    
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="185dp"
          android:layout_margin="@dimen/main_top_margin"
        
        android:background="#fff">
        <EditText
            android:id="@+id/et_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="@dimen/main_top_margin"
        android:gravity="left"
        android:background="@drawable/face_img_border_not_click"
        android:hint="@string/eme_sos_content_hint"/>
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/view_margin_big"
        android:layout_marginBottom="@dimen/view_margin"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView 
                android:id="@+id/iv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sos_camera"
				android:layout_margin="@dimen/main_top_margin"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/eme_sos_camera_label"
                android:textColor="#505050"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView 
                android:id="@+id/iv_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sos_video"
				android:layout_margin="@dimen/main_top_margin"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/eme_sos_video_label"
                android:textColor="#505050"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView 
                android:id="@+id/iv_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sos_record"
				android:layout_margin="@dimen/main_top_margin"/>
            <TextView
                android:id="@+id/tv_record" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/eme_sos_record_label"
                android:textColor="#505050"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
    
    <Button
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="@dimen/view_margin"
         android:layout_marginTop="@dimen/view_margin_big"
         android:background="@drawable/bg_question_btn"
         android:gravity="center"
                android:text="@string/commit_question"
                android:textColor="#fff"
                android:textSize="24sp" />

</LinearLayout>
