<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#fff">
        <EditText 
            android:layout_width="252dp"
            android:layout_height="44dp"
            android:hint="@string/knowledge_search_hint"
            android:background="@drawable/bg_edittext"
            android:paddingLeft="@dimen/view_margin"/>
        <LinearLayout 
            android:layout_width="87dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_search_btn"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serarch_btn_label"
                android:textSize="@dimen/search_btn_text_size"
                android:textColor="#fff"/>
            </LinearLayout>
    </LinearLayout>
     <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginBottom="@dimen/main_top_margin"
        android:background="@color/line_color" />
     
     <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/knowledge_related_question"
        android:textColor="@color/tab_text"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/main_top_margin"/>
<View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginTop="@dimen/main_top_margin"
        android:background="@color/line_color" />

<GridView 
    android:id="@+id/gvRelatedQuestion"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:numColumns="2"
    android:horizontalSpacing="1dp"
    android:verticalSpacing="1dp"/>
<View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginBottom="@dimen/main_top_margin"
        android:background="@color/line_color" />
 <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/knowledge_related_knowledge"
        android:textColor="@color/tab_text"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/main_top_margin"/>
 <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_size"
        android:layout_marginTop="@dimen/main_top_margin"
        android:background="@color/line_color" />
 <GridView 
    android:id="@+id/gvRelatedKnowledge"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:numColumns="2"
    android:horizontalSpacing="1dp"
    android:verticalSpacing="1dp"/>
 <include layout="@layout/layout_line"/>
</LinearLayout>
