<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#40000000">
    
    <View 
        android:id="@+id/click_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="273dp"
        android:background="#fff"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:textColor="#06c5e9"
            android:textSize="@dimen/title_text"
            android:layout_marginTop="@dimen/view_margin"
            android:layout_marginBottom="@dimen/view_margin"
            android:gravity="center"/>
	        <ImageView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/bg_line"
	        android:scaleType="fitXY"/>
	        <LinearLayout
	            android:id="@+id/layout_select"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:orientation="vertical"
	            android:gravity="center">

	            <LinearLayout
	                android:id="@+id/layout_camera"
	                android:layout_height="33dp"
	                android:layout_width="195dp"
	                android:gravity="center"
	                android:orientation="horizontal" 
                	android:background="#06c5e9">
					<ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/ic_camera"/>
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#fff"
	                android:textSize="@dimen/text_size"
	                android:text="@string/photo_from_camera"
	                android:layout_marginLeft="@dimen/view_margin_small"/>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/layout_album"
	                android:layout_height="33dp"
	                android:layout_width="195dp"
	                android:gravity="center"
	                android:orientation="horizontal" 
                	android:background="#06c5e9"
                	android:layout_marginTop="@dimen/view_margin">

	                <ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:src="@drawable/ic_photo"/>
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#fff"
	                android:textSize="@dimen/text_size"
	                android:text="@string/photo_from_album"
	                android:layout_marginLeft="@dimen/view_margin_small"/>
	            </LinearLayout>
	            <LinearLayout
	                android:id="@+id/layout_cancle"
	                android:layout_height="33dp"
	                android:layout_width="195dp"
	                android:gravity="center"
	                android:orientation="horizontal" 
                	android:background="#bfbebe"
                	android:layout_marginTop="@dimen/view_margin">
	            <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:textColor="#fff"
	                android:textSize="@dimen/text_size"
	                android:text="@string/cancle"
	                android:layout_marginLeft="@dimen/view_margin_small"/>
	            </LinearLayout>
	        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
