<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f8f3"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/image1"
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:layout_marginTop="2dip"
        android:background="@drawable/question_newcolor" />

    <TextView
        android:id="@+id/image2"
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:layout_below="@id/image1"
        android:layout_marginTop="3dp"
        android:background="@drawable/question_newcolor_d" />

    <EditText
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="257dip"
        android:layout_below="@id/image2"
        android:background="#ffffff"
        android:gravity="top"
        android:hint="@string/question_hint"
        android:lineSpacingExtra="1.5dp"
        android:lineSpacingMultiplier="1.3"
        android:padding="15dip"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@+id/content"
        android:layout_marginTop="1dp"
        android:background="#E0E0E0" />

    <LinearLayout
        android:id="@+id/ll_notifi_btns"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/line1" >

        <RelativeLayout
            android:id="@+id/rl_sysNotifi"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_horizontal|center_vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/camer"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_question_camera" />

                <TextView
                    android:id="@+id/xi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/question_up_photo"
                    android:textColor="#5B5B5B"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/sysimage"
                    android:layout_width="22dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_question_arrow" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_teamNotifi"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center_horizontal|center_vertical" >

            <TextView
                android:id="@+id/linew"
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:background="#E0E0E0" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@id/linew"
                android:gravity="center_vertical|center_horizontal" >

                <ImageView
                    android:id="@+id/buwei"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_question_position" />

                <TextView
                    android:id="@+id/tuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/question_select_position"
                    android:textColor="#5B5B5B"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/teamimage"
                    android:layout_width="22dp"
                    android:layout_height="15dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_question_arrow" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/image3"
        android:layout_width="fill_parent"
        android:layout_height="3dip"
        android:layout_below="@id/ll_notifi_btns"
        android:background="@drawable/question_newcolor" />

    <Button
        android:id="@+id/btn_commit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/image3"
        android:layout_centerInParent="true"
        android:layout_marginTop="50sp"
        android:background="@drawable/bg_question_btn"
        android:text="@string/question_submit"
        android:textColor="#ffffff"
        android:textSize="22sp" />

</RelativeLayout>